RESOLVED FIXED32439
Scrollbar of overflow:scroll div in compositing layer fails to render
https://bugs.webkit.org/show_bug.cgi?id=32439
Summary Scrollbar of overflow:scroll div in compositing layer fails to render
Simon Fraser (smfr)
Reported 2009-12-11 10:07:25 PST
Created attachment 44694 [details] Testcase The scrollbars in the attached testcase fail to render.
Attachments
Testcase (904 bytes, text/html)
2009-12-11 10:07 PST, Simon Fraser (smfr)
no flags
Patch (6.41 KB, patch)
2009-12-31 17:53 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2009-12-31 17:53:25 PST
mitz
Comment 2 2009-12-31 17:56:28 PST
Comment on attachment 45724 [details] Patch > + return m_hBar || m_vBar || m_scrollCorner || renderer()->style()->resize() != RESIZE_NONE; > +; ;?
Simon Fraser (smfr)
Comment 3 2010-01-01 11:41:05 PST
Note You need to log in before you can comment on or make changes to this bug.