2010-01-01  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Scrollbar of overflow:scroll div in compositing layer fails to render
        https://bugs.webkit.org/show_bug.cgi?id=32439

        When deciding whether a RenderLayer needs backing store, check whether it has
        overflow controls that need painting.

        Test: compositing/overflow/scrollbar-painting.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::hasOverflowControls):
        * rendering/RenderLayer.h:
        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::isSimpleContainerCompositingLayer):

Canonical link: https://commits.webkit.org/44099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52686 268f45cc-cd09-0410-ab3c-d52691b4dbfc